# TissueFormer

./: .gitignore  README.md  draft.tex  model.py  pyproject.toml
applications/brain_annotation/: analyze_attention.py  benchmarks.py
applications/brain_annotation/config/: benchmarks.yaml  config.yaml
applications/brain_annotation/config/benchmark_models/: scagg.yaml  scrat.yaml
applications/brain_annotation/data/: area_annotation_plots.ipynb  calculate_class_weights.py  tokenize_cells.py
applications/brain_annotation/paper_figures/: utils.py
applications/brain_annotation/scripts/: dl_benchmark_array.sh
applications/covid/: README.md  analyze_attention.py  benchmarks.py  run_experiments.sh  train.py
applications/covid/config/: config.yaml  ds_zero2.json
applications/covid/data/: create_combined.py  preprocess_h5ad.py  raw_data_standardization.ipynb  tokenize_cells.py
applications/covid/figures/: create_slides.py  dataset_summary.pptx  plot_diagnostics.py  plot_results.py
applications/covid/scripts/: benchmark_array.sh  dl_benchmark_array.sh  run_experiments.sh  sweep_batch_size.sh  sweep_lr.sh  train_array.sh
applications/covid/tests/: test_benchmarks.py  test_collator.py  test_donor_sampler.py  test_end_to_end.py  test_tokenization.py
paper_figures/fig2/: cell_type_accuracy_convergence.ipynb  hyperparameters.ipynb
tissueformer/: __init__.py  attention_analysis.py  class_weights.py  model.py  samplers.py  tokenizer.py  train.py
tissueformer/benchmark_models/: README.md  __init__.py  cellcnn.py  data.py  scagg.py  scrat.py  trainer.py
(+14 files in other folders)
